<resources>
    <string name="app_name">Lesson_11_3</string>
    <string name="email">Email</string>
    <string name="user_name">Name</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="user_last_name">Last Name</string>
    <string name="submit">submit</string>
    <string name="add_photo">add photo</string>
    <string name="img_regFragment_user_avatar">User avatar</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit_profile">Edit profile</string>
    <string name="confirm_password">Confirm password</string>
    <string name="empty_field_explanation">Field can\'t be empty</string>
    <string name="invalid_email_explanation">Please enter a valid e-mail address</string>
    <string name="weak_password_explanation">Mast be at least one digit, one lover case and upper case letter, one special char and no spaces</string>
    <string name="password_mismatch">\"Password mismatch \"</string>
    <string name="no_user_explanations">There is no such user.</string>
    <string name="wrong_password_explanations">Wrong password</string>
    <string name="user_exist_explanations">\"Such user already exists \"</string>
    <string name="update">Update</string>
    <string name="choose_image">Choose image</string>
    <string name="alertDialog_checkPerm_title">Permission Required</string>
    <string name="alertDialog_checkPerm_desc">Storage permission is required to save data</string>
    <string name="alertDialog_checkPerm_posButton">ALLOW</string>
    <string name="alertDialog_checkPerm_negButton">DENIED</string>
    <string name="permission_denied">Permission denied</string>
</resources>